# php-trace

./: .gitignore  CMakeLists.txt  README.md  composer.json  config.m4  config.w32  docker-compose.yml  grafana-dashboard.json  grafana-datasources.yaml  loki-config.yaml  php_trace.ini  test_return_value.php  test_standalone  test_standalone.cpp  test_tempo_verify.php  test_trace.php
docker/: Dockerfile  Dockerfile.php80  Dockerfile.runtime  build-all.sh  docker-compose.yml
include/: loki_exporter.h  php_trace.h  span.h  span_buffer.h
src/: loki_exporter.cpp  php_trace.cpp  span.cpp  span_buffer.cpp
